--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -23,10 +23,11 @@ PKG_SEARCH_MODULE(SDL2 REQUIRED sdl2)
 PKG_SEARCH_MODULE(SDL2TTF REQUIRED SDL2_ttf)
 PKG_SEARCH_MODULE(SDL2IMAGE REQUIRED SDL2_image)
 PKG_SEARCH_MODULE(SDL2MIXER REQUIRED SDL2_mixer)
+PKG_SEARCH_MODULE(SDL2GFX REQUIRED SDL2_gfx)
 
-INCLUDE_DIRECTORIES(${STATUS_SDL_INCLUDE} ${SDL2_INCLUDE_DIRS} ${SDL2TTF_INCLUDE_DIRS} ${SDL2IMAGE_INCLUDE_DIRS} ${SDL2MIXER_INCLUDE_DIRS} /usr/local/include)
+INCLUDE_DIRECTORIES(${STATUS_SDL_INCLUDE} ${SDL2_INCLUDE_DIRS} ${SDL2TTF_INCLUDE_DIRS} ${SDL2IMAGE_INCLUDE_DIRS} ${SDL2MIXER_INCLUDE_DIRS} ${SDL2GFX_INCLUDE_DIRS} /usr/local/include)
 
-target_link_libraries(sandbox ${STATUS_SDL_LIBRARY} ${SDL2_LIBRARIES} ${SDL2TTF_LIBRARIES} ${SDL2IMAGE_LIBRARIES} ${SDL2MIXER_LIBRARIES}
+target_link_libraries(sandbox ${STATUS_SDL_LIBRARY} ${SDL2_LIBRARIES} ${SDL2TTF_LIBRARIES} ${SDL2IMAGE_LIBRARIES} ${SDL2MIXER_LIBRARIES} ${SDL2GFX_LIBRARIES}
         pthread
         miranda_ground miranda_objects
         miranda_geometry miranda_io
